<resources>
    <string name="app_name">AITUrm</string>
    <string name="open" />
    <string name="close" />
    <string name="error">Error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="ok">OK</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="requests">Requests</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="api_key">AIzaSyCF5NRNtEAcNX0QAXquDQ68yCYXsLhp2Ao</string>
    <string name="Heading_discover">Discover</string>
    <string name="title_activity_group_chatting">GroupChattingActivity</string>
    <string name="favorites">Favorites</string>
    <string name="looks_like_you_have_no_favorite_apartment_posts">Looks like you have no favorite apartment posts...</string>
    <string name="NoPersonalPostText">Looks like you have no favorite personal posts yet...</string>
    <string name="user_have_not_preferences">The user has not specified any preferences</string>
    <string-array name="spinner_options">
        <item>Importance</item>
        <item>latest</item>
        <item>Oldest</item>
        <item>Title</item>
    </string-array>
    <string-array name="spinner_language">
        <item>English</item>
        <item>Руский</item>
        <item>Қазақша</item>
    </string-array>
    <string-array name="spinner_speciality">
        <item>Computer Science</item>
        <item>Software Engineering</item>
        <item>Big Data Analysis</item>
        <item>Media Technologies</item>
        <item>Cyber Security</item>
        <item>Telecommunication Systems</item>
        <item>Smart Technologies</item>
    </string-array>
    <string-array name="spinner_se">
        <item>SE-2000</item>
        <item>SE-2001</item>
        <item>SE-2002</item>
        <item>SE-2003</item>
        <item>SE-2004</item>
    </string-array>
    <string-array name="spinner_cs">
        <item>CS-2000</item>
        <item>CS-2001</item>
        <item>CS-2002</item>
        <item>CS-2003</item>
        <item>CS-2004</item>
    </string-array>
    <string-array name="spinner_mt">
        <item>MT-2000</item>
        <item>MT-2001</item>
        <item>MT-2002</item>
        <item>MT-2003</item>
        <item>MT-2004</item>
    </string-array>
    <string-array name="spinner_bd">
        <item>BD-2000</item>
        <item>BD-2001</item>
        <item>BD-2002</item>
        <item>BD-2003</item>
        <item>BD-2004</item>
    </string-array>
    <string-array name="spinner_it">
        <item>IT-2000</item>
        <item>IT-2001</item>
        <item>IT-2002</item>
        <item>IT-2003</item>
        <item>IT-2004</item>
    </string-array>
    <string-array name="spinner_ts">
        <item>TS-2000</item>
        <item>TS-2001</item>
        <item>TS-2002</item>
        <item>TS-2003</item>
        <item>TS-2004</item>
    </string-array>
    <string-array name="spinner_st">
        <item>ST-2000</item>
        <item>ST-2001</item>
        <item>ST-2002</item>
        <item>ST-2003</item>
        <item>ST-2004</item>
    </string-array>
    <string name="gallery">Gallery</string>
    <string name="remove_member">Remove member</string>
    <string name="you">You</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="mark_card_as_done">Mark as done</string>
    <string name="done">Done!</string>
    <string name="no_due_date">no due date</string>
    <string name="due_today">Due today</string>
    <string name="due">Due</string>
    <string name="day_left"> day left</string>
    <string name="days_left"> days_left</string>
    <string name="parsing_error">Parsing error! Please try again later</string>
    <string name="server_error">Server error. Please try again later</string>
    <string name="no_internet">Cannot connect to Internet</string>
    <string name="delete_card_error">We encountered an error while deleting the card</string>
    <string name="card_deleted">Card deleted</string>
    <string name="authentication_error">We encountered an error while authenticating your account</string>
    <string name="archiving_error">We encountered an error while archiving the card</string>
    <string name="user_deleting_error">We encountered an error while deleting the use</string>
    <string name="card_archived">Card archived</string>
    <string name="marking_error">Couldn\'t mark the card</string>
    <string name="card_marked_as_done">Card marked as done</string>
    <string name="unexpected_error">An unexpected error has occured</string>
    <string name="card_marked_as_not_done">Card marked as not done</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="search_for_building_name">You must search for the building name</string>
    <string name="search_for_the_nearest_place">Search the nearest place or drag and drop the pin</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="group">Group</string>
    <string name="speciality">Speciality</string>
    <string name="phone_number">Phone number</string>
    <string name="patronymic_name">Patronymic name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="gender_select_male">Male</string>
    <string name="gender_select_female">Female</string>
    <string name="add_address">Enter your street</string>
    <string name="add_house_number">Enter your house number</string>
    <string name="undefined">Undefined</string>
    <string name="apartment_post">Apartment post</string>
    <string name="roommate_post">Roommate post</string>
    <string name="select_type_residential_unit">Select the type of your residential unit</string>
    <string name="select_type_preferred_unit">Select your preferred unit types</string>
    <string name="attention">Attention!</string>
    <string name="error_occurred_with_post_creating">An error occurred while creating the post, please try again later</string>
    <string name="error_room_members_can_not_be_empty">Room members can not be empty!</string>
    <string name="error_budget_can_not_be_empty">Budget can not be empty!</string>
    <string name="publish_post">Publish post</string>
    <string name="post_success">Post published successfully</string>
    <string name="post_failed">Failed to publish post</string>
    <string name="add_image_of_your_place">Please add an image of your place</string>
    <string name="error_cannot_message_with_yourself">You cannot send messages to yourself</string>
    <string name="error_select_unit_type">Please select the type of your unit</string>
    <string name="error_add_street">Please add a street name</string>
    <string name="error_add_house_number">Please add a house number</string>
    <string name="error_enter_description">Please enter a description</string>
    <string name="already_have_apartment">Now you already live in an apartment. Do you want to create a new advertisement?.</string>
    <string name="already_have_personal_post">You already have a personal post, delete it and create a new one or edit it.</string>
    <string name="already_have_apartment_post">You already have a apartment post, delete it and create a new one or edit it.</string>
    <string name="already_apartment_member">You are already a member of the apartment, leave the apartment before creating your personal post.</string>
    <string name="field_should_contains_only_letters">This field must contain only letters</string>
    <string name="field_can_not_be_empty">This field can not be empty!</string>
    <string name="publishing_post">Publishing your post!</string>
    <string name="add_users_to_group">Add users to your current group to add cards and manage your unit</string>
    <string name="no_such_user_found">No such user found</string>
    <string name="request_sent_success">Request successfully send!</string>
    <string name="request_sent_failed">Failed to send request</string>
    <string name="network_error_uploading_image">An error occurred while uploading your images</string>
    <string name="network_error">Network error, try again later</string>
    <string name="you_are_member">You are now a member of the apartment!</string>
    <string name="you_will_no_longer_be_a_roommate">You will no longer be a roommate in this apartment.</string>
    <string name="you_dont_have_apartment">You don\'t have an apartment, please accept requests before entering here.</string>
    <string name="sending">Sending…</string>
    <string name="place">Place</string>
    <string name="profile">Profile</string>
    <string name="send_message">Send Message</string>
    <string name="user_posts">User Posts</string>
    <string name="apartment">Apartment</string>
    <string name="personal">Personal</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="go_to_my_aiturm">Go to My Aiturm</string>
    <string name="empty_sent_request_list">You haven\'t sent any requests yet, you can go to My aiturm and start sending request now.</string>
    <string name="add_a_post">Add a post</string>
    <string name="empty_received_request_list">Sorry, you don\'t have requests to join a room yet. Add a post to let others know about you.</string>
    <string name="received">Received</string>
    <string name="sent">Sent!</string>
    <string name="request">Request</string>
    <string name="choose_type_of_post">Choose the type of your post</string>
    <string name="roommates">Roommates</string>
    <string name="rooms">Rooms</string>
    <string name="users">Users</string>
    <string name="logout">Log out</string>
    <string name="talk_about_yourself">Talk about yourself</string>
    <string name="apartment_type_condominium">Condominium</string>
    <string name="apartment_type_apartment">Apartment</string>
    <string name="apartment_type_flat">Flat</string>
    <string name="apartment_type_town_house">Town house</string>
    <string name="search_building_name">You must search for the building name</string>
    <string name="next">Next</string>
    <string name="add_some_images">Add some images for your future roommates</string>
    <string name="add_more_images">Add more images</string>
    <string name="roommates_lower_case">roommates</string>
    <string name="about_this_post">About this post</string>
    <string name="read_more">Read more</string>
    <string name="pets">Pets</string>
    <string name="smoking">Smoking</string>
    <string name="alcohol">Alcohol</string>
    <string name="delete">Delete</string>
    <string name="you_are_allowing">You\'re allowing:</string>
    <string name="you_are_looking_for">You\'re looking for:</string>
    <string name="allows">allows:</string>
    <string name="is_looking_for">is looking for:</string>
    <string name="budget">Budget</string>
    <string name="prefers">Prefers</string>
    <string name="no_description_added">No description added</string>
    <string name="delete_post_message">Are you sure you want to delete the post?</string>
    <string name="choose_the_language">Choose the language</string>
</resources>